[package]
name = "gamecode-bedrock"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "AWS Bedrock implementation for gamecode-backend with production-ready retry logic"
repository = "https://github.com/navicore/gamecode-bedrock"

[dependencies]
gamecode-backend = { path = "../gamecode-backend" }
aws-config = "1.6.3"
aws-sdk-bedrockruntime = "1.89.0"
aws-smithy-types = "1.2.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"